--- a/package.xml
+++ b/package.xml
@@ -1,33 +1,57 @@
+<?xml version="1.0"?>
 <package>
   <name>metal_detector_msgs</name>
-  <version>1.0.0</version>
-  <description>
-	ROS messages for metal detector hardware drivers.
-</description>
-  <maintainer email="goncabrita@gmail.com">Gonçalo Cabrita</maintainer>
+  <version>0.0.0</version>
+  <description>The metal_detector_msgs package</description>
 
-  <license>BSD</license>
+  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- Example:  -->
+  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
+  <maintainer email="lsa@todo.todo">lsa</maintainer>
 
-  <url type="website">http://ros.org/wiki/metal_detector_msgs</url>
 
-  <author>Gonçalo Cabrita</author>
+  <!-- One license tag required, multiple allowed, one license per tag -->
+  <!-- Commonly used license strings: -->
+  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
+  <license>TODO</license>
 
-  <!-- Dependencies which this package needs to build itself. -->
+
+  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
+  <!-- Optional attribute type can be: website, bugtracker, or repository -->
+  <!-- Example: -->
+  <!-- <url type="website">http://wiki.ros.org/metal_detector</url> -->
+
+
+  <!-- Author tags are optional, mutiple are allowed, one per tag -->
+  <!-- Authors do not have to be maintianers, but could be -->
+  <!-- Example: -->
+  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
+  <author email="renanmaidana@gmail.com">Renan Maidana</author>
+
+  <!-- The *_depend tags are used to specify dependencies -->
+  <!-- Dependencies can be catkin packages or system dependencies -->
+  <!-- Examples: -->
+  <!-- Use build_depend for packages you need at compile time: -->
+  <!--   <build_depend>message_generation</build_depend> -->
+  <!-- Use buildtool_depend for build tool packages: -->
+  <!--   <buildtool_depend>catkin</buildtool_depend> -->
+  <!-- Use run_depend for packages you need at runtime: -->
+  <!--   <run_depend>message_runtime</run_depend> -->
+  <!-- Use test_depend for packages you need only for testing: -->
+  <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-
-  <!-- Dependencies needed to compile this package. -->
-  <build_depend>message_generation</build_depend>
+  <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
-
-  <!-- Dependencies needed after this package is compiled. -->
+  <build_depend>message_generation</build_depend>
+  <run_depend>message_generation</run_depend>
   <run_depend>message_runtime</run_depend>
+  <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
 
-  <!-- Dependencies needed only for running tests. -->
-  <!-- <test_depend>geometry_msgs</test_depend> -->
 
-<export>
-    <rosdoc config="rosdoc.yaml"/>
-</export>
+  <!-- The export tag contains other, unspecified, tags -->
+  <export>
+    <!-- Other tools can request additional information be placed here -->
 
+  </export>
 </package>
